--- a/DesignOnPanel/DesignOnPanel.csproj
+++ b/DesignOnPanel/DesignOnPanel.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vector.cs" />
+    <Compile Include="vector2.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
